quick links spacing fix

--- a/assets/styles/04-components/home-blocks.scss
+++ b/assets/styles/04-components/home-blocks.scss
@@ -222,7 +222,7 @@
   Main Links Block
 */
 .slide--cat-entry {
-  @apply bg-white rounded-md h-36 mb-8 p-3 text-center flex flex-col items-center justify-center text-gray-400 transition duration-500 hover:shadow-default hover:text-gray-500 border border-gray-100;
+  @apply bg-white rounded-md h-36 p-3 text-center flex flex-col items-center justify-center text-gray-400 transition duration-500 hover:shadow-default hover:text-gray-500 border border-gray-100;
 
   i {
     @apply inline-block text-primary text-icon-lg mb-4;
@@ -237,7 +237,7 @@
   offers slider
 */
 .slide--offer-entry {
-  @apply bg-white rounded-md h-36 mb-8 text-center flex flex-col items-center justify-between text-gray-600 transition duration-500 hover:shadow-default border border-border-color;
+  @apply bg-white rounded-md h-36 text-center flex flex-col items-center justify-between text-gray-600 transition duration-500 hover:shadow-default border border-border-color;
 }
 
 
@@ -261,7 +261,7 @@
   }
 
   &--categories{
-    @apply relative overflow-hidden mt-8;
+    @apply relative overflow-hidden;
 
     &__title{
       @apply font-bold text-lg mb-6 sm:mb-8 relative z-1 min-h-[28px];
